[package]
name = "simple-hash"
version = "0.1.0"
edition = "2021"
description = "A simple interface for hashing rust values"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
byteorder = "1.4.3"
paste = "1.0.7"
sha2 = "0.10.2"
simple-hash-macro = "0.1.0"

[dev-dependencies]
hex-literal = "0.3.4"
