[package]
name = "simple-hash-macro"
version = "0.1.1"
edition = "2021"
description = "A derive macro for simple-hash"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
proc-macro2 = "1.0.39"
quote = "1.0.18"
syn = "1.0.95"

[lib]
proc-macro = true
